// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expesne
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      key="0"
    >
      <Component
        amount={1922}
        createdAt={0}
        description="Gum"
        id="1"
        note=""
      />
    </div>
    <div
      key="1"
    >
      <Component
        amount={12}
        createdAt={-345600000}
        description="Rent"
        id="2"
        note=""
      />
    </div>
    <div
      key="2"
    >
      <Component
        amount={2001}
        createdAt={345600000}
        description="Credit cart"
        id="3"
        note=""
      />
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 2`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expesne
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
